--- a/sass/templates/_archive.scss
+++ b/sass/templates/_archive.scss
@@ -21,9 +21,41 @@
 }
 
 .archive__filters {
-  display: flex;
-  align-items: center;
+  display: block;
   padding: 0 0 2rem;
+
+  @include m-media(md) {
+    display: flex;
+    align-items: center;
+  }
+
+  > span,
+  > a {
+    display: block;
+    width: fit-content;
+
+    @include m-media(md) {
+      display: inline;
+    }
+  }
+
+  > span {
+    margin: 0px 0px 1em;
+
+    @include m-media(md) {
+      margin: 0px 1em 0px 0px;
+    }
+  }
+
+  > a {
+    font-family: $font__secondary;
+    margin: 0px 0px 1em;
+
+    @include m-media(md) {
+      display: inline;
+      margin: 0px 1em;
+    }
+  }
 }
 
 .archive__filter {
@@ -32,8 +64,6 @@
   cursor: pointer;
   padding: 0 0.3rem;
   margin: 0 0.2rem;
-  border-bottom: 1px solid transparent;
-  text-decoration: none;
 
   &:first-child {
     margin-left: 0.5rem;
@@ -46,6 +76,5 @@
   &:hover,
   &.active {
     color: $color__font-primary;
-    border-bottom: 1px solid;
   }
 }
