--- a/sass/templates/_event.scss
+++ b/sass/templates/_event.scss
@@ -2,6 +2,7 @@
   .post-header {
     border-bottom: 3px solid $color__theme-secondary;
   }
+
   .post-content {
     display: flex;
     flex-direction: column;
@@ -15,23 +16,27 @@
       font-weight: bold;
       margin-bottom: 0;
     }
+
     .post-content__inscription {
       flex: 1;
       padding-right: 1.5rem;
+
       p {
         margin-top: 0;
       }
+
       .artistic-description p {
         font-size: $font__size-small;
         line-height: $font__line-height-small;
       }
     }
+
     .post-content__description {
       flex: 3;
       align-items: flex-start;
 
       @include m-media(zr, md) {
-        padding-top: vh(10);
+        padding-top: 3rem;
         border-top: 3px solid $color__theme-secondary;
       }
 
@@ -57,27 +62,45 @@
         width: 100%;
         margin-top: 3rem;
 
-        @include m-media(md) {
-          @include m-columns-width(9, all);
-          margin-left: auto;
+        iframe {
+          width: 100%;
+          height: 30vh;
+
+          @include m-media(md) {
+            @include m-columns-width(9, all);
+            margin-left: auto;
+            height: 40vh;
+          }
+
+          @include m-media(lg) {
+            height: 50vh;
+          }
         }
       }
 
       .thumbnail-container img {
         margin: 0 0.5rem;
         object-fit: cover;
-        height: 50vh;
+        height: 30vh;
+
+        @include m-media(md) {
+          height: 40vh;
+        }
+
+        @include m-media(lg) {
+          height: 50vh;
+        }
       }
     }
   }
+
   .carroussel-container {
-    position: relative;
-    //height: 100%;
-    max-width: 100vw;
-    //max-height: calc(100vh - var(--header-height));
-    //width: vw(55);
-    @include m-columns-width(9, all);
-    margin-left: auto;
+    width: 100%;
+
+    @include m-media(md) {
+      @include m-columns-width(9, all);
+      margin-left: auto;
+    }
   }
   .carroussel-content {
     button {
@@ -87,6 +110,7 @@
       height: 0px;
       font-size: 0px;
     }
+
     .slick-prev:before {
       content: '<';
       position: absolute;
@@ -106,12 +130,22 @@
       font-size: 12px;
       transform: translateY(100%);
     }
+
     .carroussel-image {
-      margin: 0 0.5rem;
       object-fit: cover;
-      height: 50vh;
+      height: 30vh;
+
+      @include m-media(md) {
+        margin: 0 0.5rem;
+        height: 40vh;
+      }
+
+      @include m-media(lg) {
+        height: 50vh;
+      }
     }
   }
+
   .slides-numbers {
     width: fit-content;
     visibility: hidden;
@@ -122,6 +156,7 @@
     font-size: 12px;
     font-family: $font__secondary;
     transform: translate(-50%, 100%);
+
     &.show {
       visibility: visible;
     }
@@ -139,7 +174,10 @@
   }
 
   .slick-slide img {
-    width: 30vw;
+    width: 100%;
+
+    @include m-media(md) {
+      width: 30vw;
+    }
   }
 }
-
